# catch-lightning-talk-snippets

./: CMakeLists.txt
benchmarks/: simple-benchmark.cpp
generators/: chained-generators.cpp  file-generator.cpp  nested-generator.cpp  simple-generator.cpp
templates/: nttp-template-testcase.cpp  simple-template-testcase.cpp  template-product-testcase.cpp
test-inputs/: coefs.txt
